Changes in Shorewall 4.3.8

1) Apply Tuomo Soini's patch for USE_DEFAULT_RT.

2) Use 'startup_error' for those errors caught early.

3) Fix swping

4) Detect gateway via dhclient leases file.

5) Suppress leading whitespace on certain continuation lines.

6) Use iptables[6]-restore to stop the firewall.

Changes in Shorewall 4.3.7

1)  Fix forward treatment of interface options.

2)  Replace $VARDIR/.restore with $VARDIR/firewall

3)  Fix DNAT- parsing of DEST column.

4)  Implement dynamic zones

5)  Allow 'HOST' options on bridge ports.

6)  Deprecate old macro parameter syntax.

Changes in Shorewall 4.3.6

1)  Add SAME tcrules target.

2)  Make 'dump' display the raw table. Fix shorewall6 dump anomalies.

3)  Fix split_list1()

4)  Fix Shorewall6 file location bugs.

Changes in Shorewall 4.3.5

1)  Remove support for shorewall-shell.

2)  Combine shorewall-common and shorewall-perl to product shorewall.

3)  Add nets= OPTION in interfaces file.

4)  Add SAME MARK/CLASSIFY target

