@@ -184,6 +184,8 @@ AUTO_COMMENT=Yes
 
 MANGLE_ENABLED=Yes
 
+AUTOMAKE=No
+
 ###############################################################################
 #			P A C K E T   D I S P O S I T I O N
 ###############################################################################
