@@ -190,6 +190,8 @@ RESTORE_DEFAULT_ROUTE=Yes
 
 FAST_STOP=No
 
+AUTOMAKE=No
+
 ###############################################################################
 #			P A C K E T   D I S P O S I T I O N
 ###############################################################################
