@@ -204,6 +204,21 @@
       </varlistentry>
 
       <varlistentry>
+        <term><emphasis role="bold">AUTOMAKE=</emphasis>[<emphasis
+        role="bold">Yes</emphasis>|<emphasis role="bold">No</emphasis>]</term>
+
+        <listitem>
+          <para>If set, the behavior of the 'start' command is change; if no
+          files in /etc/shorewall have been changed since the last successful
+          <command>start</command> or <command>restart</command> command, then
+          the compilation step is skipped and the compiled script that
+          executed the last <command>start</command> or
+          <command>restart</command> command is used. The default is
+          AUTOMAKE=No.</para>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry>
         <term><emphasis
         role="bold">BLACKLIST_DISPOSITION=</emphasis>[<emphasis
         role="bold">DROP</emphasis>|<emphasis
