@@ -12,6 +12,8 @@ Changes in Shorewall 4.3.8
 
 6) Use iptables[6]-restore to stop the firewall.
 
+7) Add AUTOMAKE option
+
 Changes in Shorewall 4.3.7
 
 1)  Fix forward treatment of interface options.
